fix(Advanced): remove margin on tablet

--- a/src/components/Layout/Advanced/index.css
+++ b/src/components/Layout/Advanced/index.css
@@ -11,6 +11,7 @@
   @media (--tablet) {
     display: flex;
     flex-direction: row;
+    margin-bottom: 0;
   }
 }
 
